--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'bootstrap/scss/bootstrap';
+@use 'global-scss/variables';
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 16px;
+    color: var(--text-gray);
+    background: var(--bg-color-1);
+    line-height: 1.6;
+}
+
+/* Importing Bootstrap SCSS file. */
